--- a/app_backend/requirements.txt
+++ b/app_backend/requirements.txt
@@ -14,6 +14,7 @@ google-auth-httplib2==0.1.0
 google-cloud-core==1.6.0
 google-cloud-firestore==2.1.1
 google-cloud-storage==1.38.0
+google-cloud-vision==2.4.0
 google-crc32c==1.1.2
 google-resumable-media==1.3.0
 googleapis-common-protos==1.53.0
