--- a/app_backend/requirements.txt
+++ b/app_backend/requirements.txt
@@ -7,6 +7,7 @@ cffi==1.14.5
 chardet==4.0.0
 cycler==0.11.0
 Django==3.2.4
+django-cors-headers==3.11.0
 firebase-admin==5.0.0
 fonttools==4.29.1
 google-api-core==1.30.0
